--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>MENU CIRENG</h1> 
+   <div id="page-container"> hello world. </div>
 </body>
 </html>
