--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <script>alert("Haiiiiiii imoeettt");
+confirm("Apakah kamu ingin melanjutkan?");
+prompt("Masukkan nama kamu:","shibal anyong");
+function foo() { 
+alert("pudpudpudpuddd");
+} foo(); a 
+Date("2024-06-12");
+parseInt("2");
+setTimeout(function(){ alert("Ini adalah alert dari setTimeout"); }, 3000);</script>
 <div id="page-container">
     <div id="main-nav">
         <a href="index.html">index</a> -
@@ -29,6 +38,7 @@
         <a href="links.html">my special links</a> -
         <a href="dampak.html">dampak internet</a>
     </div>
+    <script src="belajar.js"></script>
 Copyright &copy; nama/nim Powered by CSS </div>
 </div>
 </body>
